--- a/style.css
+++ b/style.css
@@ -18,13 +18,29 @@
   /* flex: 0 1; */
 }
 
-.header {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  color: var(--gray-color);
-  font-size: 14px;
-  margin-top: 28px;
+@media (min-width: 600px) {
+  .header {
+    display: flex;
+
+    flex-wrap: wrap;
+    justify-content: space-between;
+    color: var(--gray-color);
+    font-size: 14px;
+    margin-top: 28px;
+  }
+}
+
+@media (max-width: 600px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    row-gap: 20px;
+    color: var(--gray-color);
+    font-size: 14px;
+    margin-top: 30px;
+  }
 }
 
 .main {
@@ -76,52 +92,87 @@
   font-size: 20px;
 }
 
-.search {
-  background-color: var(--background-color);
-  display: flex;
-  flex-wrap: wrap;
-  padding: 20px 100px 21px 85px;
-  align-items: center;
-  border-radius: 50px;
+@media (min-width: 1660px) {
+  .search {
+    background-color: var(--background-color);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 2% 10% 2% 9%;
+    align-items: center;
+    border-radius: 50px;
+  }
+  .input-btn {
+    background-color: var(--primary-color);
+    border-width: 0px;
+    color: var(--white-color);
+    width: 10%;
+    height: 50px;
+    border-radius: 10px;
+    margin-left: 1.3%;
+  }
+}
+@media (max-width: 1659px) {
+  .search {
+    background-color: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 2% 10% 2% 9%;
+    align-items: center;
+    border-radius: 50px;
+    row-gap: 20px;
+    align-items: flex-start;
+  }
+
+  .input-wrapper {
+    width: 100%;
+  }
+  .input-btn {
+    background-color: var(--primary-color);
+    border-width: 0px;
+    color: var(--white-color);
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    margin-left: 1.3%;
+  }
 }
 
 .search-text {
   font-size: 16px;
-  margin-right: 20px;
+  margin-right: 2%;
 }
 
 .input-wrapper {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
+  flex-direction: row;
   background-color: var(--white-color);
-  justify-content:flex-start;
-  /* height: 50px; */
+  justify-content: flex-start;
+  height: 50px;
   align-items: center;
   border-radius: 25px;
   color: var(--gray-color);
   border-width: 2px;
   border-style: solid;
   border-color: var(--border-color);
+  padding: 0 2px;
   flex: 1;
+  box-sizing: border-box;
 }
 
 .input-icon {
-  margin: 16px 10px 16px 20px;
+  margin: 1.7% 1% 1.7% 2%;
 }
 
 .input {
-  border-width: 1px;
+  flex: 1;
+  border-radius: 25px;
+  border-width: 0;
+  box-sizing: border-box;
 }
 
-.input-btn {
-  background-color: var(--primary-color);
-  border-width: 0px;
-  color: var(--white-color);
-  width: 10%;
-  height: 50px;
-  border-radius: 10px;
-  margin-left: 12px;
-}
 .input::placeholder {
   color: #afafaf;
   font-size: 16px;
@@ -183,6 +234,7 @@
 .topic {
   display: flex;
   flex-wrap: wrap;
+  gap: 10px;
 }
 
 .content {
@@ -230,11 +282,22 @@
   text-align: left;
   margin-top: 20px;
 }
-
-.tag-list-1 {
-  display: flex;
-  gap: 15px;
-  flex-wrap: wrap;
+@media (max-width: 1920px) {
+  .tag-list-1 {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (min-width: 1920px) {
+  .tag-list-1 {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 .tag-1 {
@@ -263,10 +326,22 @@
   color: var(--primary-color);
 }
 
-.tag-list-2 {
-  display: flex;
-  gap: 16px;
-  flex-wrap: wrap;
+@media screen and (min-width: 912px) {
+  .tag-list-2 {
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 912px) {
+  .tag-list-2 {
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .tag-2 {
@@ -304,9 +379,17 @@
   margin-top: 40px;
 }
 
-.footer-text {
-  color: var(--white-color);
-  font-size: 12px;
-  /* position: relative; */
-  margin-left: 64%;
+@media (min-width: 820px) {
+  .footer-text {
+    color: var(--white-color);
+    font-size: 12px;
+    margin-left: 64%;
+  }
+}
+@media (max-width: 820px) {
+  .footer-text {
+    color: var(--white-color);
+    font-size: 12px;
+    margin-left: 10%;
+  }
 }
